# writer-profile

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.web  README.md  app.py  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
data/: audit_report.json  hooks.jsonl
data/profiles/: ali_ghodsi__linkedin.json  ali_ghodsi__twitter.json  ali_ghodsi_linkedin.json  ali_ghodsi_twitter.json  aravind_srinivas__linkedin.json  aravind_srinivas__twitter.json  brian_chesky__linkedin.json  brian_chesky__twitter.json  dario_amodei__linkedin.json  dario_amodei__twitter.json  elon_musk__linkedin.json  elon_musk__twitter.json  guillermo_rauch__linkedin.json  guillermo_rauch__twitter.json  matei_zaharia__linkedin.json  matei_zaharia__twitter.json  patrick_collison__linkedin.json  patrick_collison__twitter.json  sam_altman__linkedin.json  sam_altman__twitter.json  satya_nadella__linkedin.json  satya_nadella__twitter.json  tobi_lutke__linkedin.json  tobi_lutke__twitter.json
docs/: architecture.md
docs/plans/: 2026-05-01-embeddings-mixture-of-experts.md  2026-05-01-voice-tells-em-dash-emoji.md  2026-05-02-corpus-expansion-dedup.md
docs/superpowers/plans/: 2025-04-25-automated-scraping.md  2025-04-25-voice-agent-v2-sota.md  2026-04-21-voice-agent-ceo-v1.md  2026-04-21-writer-profile-baseline.md  2026-04-29-writer-profile-monorepo.md  2026-04-30-coolify-docker-deployment.md  2026-05-01-rich-context-sources.md  2026-05-01-view-profile-fix.md  2026-05-01-word-limit-feature.md  2026-05-01-word-limit-simple.md
docs/superpowers/specs/: 2025-04-25-automated-scraping-design.md
scripts/: audit_corpus.py  clean_profiles.py  index_posts.py  scrape_blogs.py  scrape_interviews.py  scrape_linkedin.py  scrape_profiles.py  scrape_thin_authors.py  scrape_youtube.py
src/writer_profile/: api.py  cli.py  config.py  llm.py  pipeline.py
src/writer_profile/corpus/: extractor.py  ingest.py  loader.py  models.py
src/writer_profile/eval/: judge.py  samples.py
src/writer_profile/generation/: critics.py  generator.py  prompts.py  refine.py  revoice.py  thread.py
tests/: test_cli.py  test_config.py  test_llm.py  test_pipeline.py  test_scrape_cli.py
tests/corpus/: test_extractor.py  test_extractor_errors.py  test_ingest.py  test_loader.py  test_models.py
tests/eval/: test_judge.py  test_samples.py
tests/fixtures/: sample_posts.jsonl
tests/generation/: test_critics.py  test_generator.py  test_prompts.py  test_refine.py  test_revoice.py  test_thread.py
tests/retrieval/: test_embedder.py  test_store.py
tests/scraper/: test_exa.py  test_models.py
tests/virality/: test_hooks.py
tests/voice/: test_extractor.py  test_fingerprint.py  test_profile.py  test_stats.py  test_store.py  test_traits.py
(+12 files in other folders)
